fix issue with collapsed sidebar and list items, needs to be block for the correct size

--- a/app/stylesheets/_sidebar.scss
+++ b/app/stylesheets/_sidebar.scss
@@ -60,6 +60,9 @@
   .port {
     width: 45px;
   }
+  .list-group-inverse > li {
+    display: block;
+  }
 }
 
 .desired-lrp {
